  * svctool: create /var/indimail/inquery directory
  * svctool: fixed users getting added multiple times to com.apple.loginwindow HiddenUsersList
  * installer new features, 1. uninstall option (-u, -i), 2. create devices, 3. create fifo
  * Makefile: Added uninstall target
  * Added comments in installer input files
  * svctool: remove indimail, indimail-mta users from HiddenUsersList for Darwin
  * Makefile: run instcheck to set permissions on make install.
  * indimail-mta: Makefile: replaced g++ with c++ for portability
  * installer.c: fixed setting of symbolic links
  * qmail-local.c: fixed bug with loopcounter in qmail-local.c - initialized maxdeliveredto
  * qlocal_upgrade.sh: migrate /service to libexecdir
  * smtpd.c: auth functions made static
  * qmail-remote.c: digest_md5() renamed to qr_digest_md5() to avoid clash
  * removed functions duplicated in libqmail
  * postinst: fixed overwriting of QMAILLOCAL, QMAILREMOTE by service creation for odmr port (added --skipsend)
  * qmail-rspawn.c: fixed "Unable to run qmail-remote" when QMAILREMOTE variable was unset
  * svctool: fixed "Unable to run qmail-remote" when QMAILREMOTE variable wasn't set
  * svctool: use mkfifo -m to create qmail-logfifo with 666 perms
  * svctool: added default-authentication-plugin=mysql_native_password as a comment
  * qcount_dir.c: replaced alloc_re() with alloc()
  * controlfiles.q: added control file servicedir.conf
  * conf-queue: added documenation
  * removed ucspi-tcp, daemontools
  * upgrade: shutdown indimail-mta services instead of entire svscan service
  * svctool: added display for enabling/disabling auto refresh settings for service
  * spawn-filter.c: unset FILTERARGS, SPAMFILTER, QMAILLOCAL, QMAILREMOTE before calling qmail-local, qmail-remote
  * svctool: inlookup, pwdlookup service - removed svwait program. use waitfor service instead
  * indimail-mta.spec: enable openSUSE permissions