@@ -615,3 +615,5 @@ debian/daemontools.postrm
 qlocal_upgrade.sh
 cleanq.8
 docker-entrypoint.8
+sslerator
+sslerator.o
