@@ -145,3 +145,8 @@ creation
 85. svctool: inlookup, pwdlookup service - removed svwait program. use waitfor service instead
 - 14/11/2020
 86. indimail-mta.spec: enable openSUSE permissions
+- 17/11/2020
+87. qmail-daned.c: set default value for timeoutssl to prevent select() doing
+    poll
+88. sslerator: added tls/ssl protocol wrapper from indimail-virtudomains
+    package
